--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             
             <style>
                 body
-                    {background-color:#d24dff;
+                    {background-color:#008fb8
                 }
                                                               
             #g{position:absolute;
