--- a/main.html
+++ b/main.html
@@ -104,7 +104,7 @@ li a:hover:not(.active) {
          
      <center><p id="hi">“Tír gan teanga, tír gan anam. A country without a language is a country without a soul.”</p></center>
   
-                         <center><h2>Please choose ypur desired platform</h2><center>
+                         <center><h2>Please choose your desired platform</h2><center>
                     <a href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html>Mac/Windows</a><br>                             
                
        </body>
