--- a/main.html
+++ b/main.html
@@ -106,7 +106,6 @@ li a:hover:not(.active) {
   
                          <center><h2>Please choose your desired platform</h2><center>
                     <center><a href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html>Mac/Windows</a><br></center>                             
-               
-       </body>
+               <li><a class="active" href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html">Home</a></li>       </body>
 
 </html>
