--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@ li a:hover:not(.active) {
   
                          <center><h2>Please choose your desired platform</h2>
                              
-     <a href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/moreinfo.html>Mac/Windows</a><br>
+     <a href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html">Mac/Windows</a><br>
      <a href="https://www.focloir.ie/">Focloir</a><br>
                                  <a href="http://www.potafocal.com/">Potafocail</a> </center>  
                                  
