--- a/main.html
+++ b/main.html
@@ -107,7 +107,8 @@ li a:hover:not(.active) {
                          <center><h2>Please choose your desired platform</h2>
                              
      <a href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html">Mac/Windows</a><br>
-     <a href="https://www.focloir.ie/">Focloir</a><br>
+     <center><p id="y" >h<br>m<br>m<br>m<br></p></center>     
+                             <a href="https://www.focloir.ie/">Focloir</a><br>
                                  <a href="http://www.potafocal.com/">Potafocail</a> </center>  
                                  
                <li><a class="active" href="https://stjrush.github.io/Irish-at-St.Josephs-Rush/main.html>Mac/Windows</a></li>      
