--- a/main.html
+++ b/main.html
@@ -50,6 +50,16 @@
                     top:880px;
                     left:500px
                 }
+                header{font-size:35px;
+                    color: rgb(216,171,6);
+                }                    
+                nav{font-size:35px;
+                    color: rgb(216,171,6);
+                    
+                section{font-size:35px;
+                    color: rgb(216,171,6);
+                }                                        
+                }                                    
                 h2{font-size:35px;
                     color: rgb(216,171,6);
                 }
